<resources>
    <string name="app_name">Project</string>
    <string name="splash">TODO</string>
    <string name="not_a_member_yet_sign_up">Not a member yet? Sign up</string>
    <string name="log_in">Log In</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="todo">TODO</string>

    <string name="FbId">2110627662285657</string>

    <string name="title_activity_first__page">Artizanat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Log Out</string>
</resources>
