<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Log_in"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/artizanat256"
            android:layout_gravity="center"
            android:contentDescription="@string/todo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

                <EditText
                android:id="@+id/EtUN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:drawableStart="@drawable/ic_person_outline_black_24dp"
                android:drawablePadding="5dp"
                android:hint="@string/enter_username"
                android:inputType="text"
                android:maxLength="20"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/EtPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="5dp"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:id="@+id/LogInBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawablePadding="50dp"
            android:drawableEnd="@drawable/ic_send_black_24dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/not_a_member_yet_sign_up" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="2">

       <com.google.android.gms.common.SignInButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:id="@+id/googlebtn"
            android:layout_gravity="center"
            android:paddingEnd="10dp"
            android:paddingStart="10dp">

        </com.google.android.gms.common.SignInButton>

        <com.facebook.login.widget.LoginButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/facebookbtn"/>

    </LinearLayout>

</LinearLayout>